--- a/sdk/android_gradle/gradle.properties
+++ b/sdk/android_gradle/gradle.properties
@@ -9,7 +9,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx2048m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -20,14 +20,15 @@ org.gradle.jvmargs=-Xmx1536m
 compile_native_code=false
 
 # the absolute path of WebRTC Android checkout, please use exactly the same commit as this repo.
-webrtc_repo=/Users/piasy/src/media/webrtc_repo/webrtc_android/src
+webrtc_repo=/opt/work/webrtc.first/src
+
 # the relative path of where generated source file is put, relative to `webrtc_repo`.
 webrtc_build_dir=out/android_studio
 
 # the relative path of Android sdk jar, relative to `webrtc_repo`.
-android_jar=third_party/android_sdk/public/platforms/android-29/android.jar
+android_jar=third_party/android_sdk/public/platforms/android-31/android.jar
 
 # the absolute path of Python 2.x executable
-py2=/Users/piasy/miniconda3/envs/py2/bin/python
+py2=/usr/bin/python2
 # the absolute path of protoc executable, see README about how to create it.
-protoc=/Users/piasy/src/media/webrtc_repo/webrtc_android/src/out/protoc
+protoc=/opt/work/webrtc.first/src/out/StudioDebug/clang_x64/protoc
